--- a/Day2-Dark-Theme-Toggler/index.html
+++ b/Day2-Dark-Theme-Toggler/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="./main.js"></script>
     <title>Document</title>
   </head>
   <body data-theme="light">
@@ -26,6 +27,5 @@
       <input type="checkbox" id="switcher" />
       <label for="switcher">Switch</label>
     </div>
-    <script src="/main.js"></script>
   </body>
 </html>
